--- a/index.html
+++ b/index.html
@@ -107,25 +107,29 @@ Template Re-distribution is NOT allowed.
 				// "<span class='badge badge-info'>Povesteşte despre animalul tau de casa sau ce animal îţi place</span>",
 				// "<span class='badge badge-dark'>Care este desertul tau preferat?</span>",
 				// "<span class='badge badge-secondary'>Care a fost cea mai recentă localitate din Moldova pe care ai vizitat-o?</span>"
-				"Povesteşte despre o carte pe care ai citit-o",
-				"Ce hobby ai?",
-				"Ce ai învăţat nou în ultima lună?",
-				"Povesteşte despre animalul tau de casă sau ce animal îţi place",
-				"Care este desertul tau preferat?",
-				"Care a fost cea mai recentă localitate din Moldova pe care ai vizitat-o?",
-				"Când ultima dată ai scris cod şi pentru ce?",
-				"Care este/a fost disciplina ta preferată la şcoală?",
-				"Povesteşte despre un profesor/mentor care te-a inspirat",
-				"Ai făcut vreodată volutariat? Povesteşte sau alege altă întrebare",
-				"Cum i-ai explica unui copil mic ce înseamnă să scrii cod?",
-				"Cu cine din participanţi ai făcut cunoştinţă recent?",
-				"Adresează un mesaj unei participante sau catre cineva din mentori",
-				"Ce îţi este mai interesant - de citit o carte sau de scris cod? De ce?",
-				"Ce îţi este mai interesant - de citit o carte sau de făcut o prezentare publică? De ce?",
-				"Ce ai învăţat nou azi?",
-				"Care este mâncarea ta preferată?",
-				"Dacă ai avea o oră în plus azi (25 ore), ce ai face în acest timp?"
-
+				"Tell us about a book you like",
+				"What is your hobby?",
+				"What have you learned new in the last month",
+				"Tell us about your pet, or what animal do you like?",
+				"Which your favorit dessert?",
+				"Tell us about the place you recently visited?",
+				"What was your favorit subject at school?",
+				"Tell a message to one of your colleagues",
+				"Which is your favorite meal?",
+				"If you would have one extra hour today (25 hours), what would you do?",
+		                "What is something you’ve always wanted to do but haven’t done yet? ",
+		                "Would you like to be famous? In what way? ",
+				"What’s your dream car? ",
+				"Who in your life has inspired you most?",
+				"If you weren’t in this career, what could you see yourself doing?",
+				"What is your guilty pleasure?",
+				"What’s the craziest thing you have ever done?",
+				"If you had a million dollars, what would be the first thing you bought? ",
+				"What’s something interesting about your family history? ",
+				"When you’re not at work, what are your passions? ",
+				"What’s your secret talent?",
+				"Who’s the most famous person you’ve ever met?"
+	
 			];
 	function getRandomAction() {
 		var item = items[Math.floor(Math.random() * items.length)];
